.provarCaches/00Df2000001KKNJEA4/objects/IncapMessaging__Service_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>IncapMessaging__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Channel__c</fullName>
        <label>Channel</label>
        <referenceTo>IncapMessaging__Channel__mdt</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Double_Opt_In_Config__c</fullName>
        <label>Double Opt-In Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Double_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this service require double opt in before sending messages. If so the opt-int field needs to be a picklist with values of: Opted-Out, Opted-In, Double-Opted</description>
        <label>Double Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__JSON_Config_Schema__c</fullName>
        <description>https://mozilla-services.github.io/react-jsonschema-form/

You can use https://kinto.github.io/formbuilder/#/builder to create a form</description>
        <inlineHelpText>https://mozilla-services.github.io/react-jsonschema-form/

You can use https://kinto.github.io/formbuilder/#/builder to create a form</inlineHelpText>
        <label>JSON Config Schema</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Named_Credentials__c</fullName>
        <label>Named Credentials</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Router_Strategy_Class__c</fullName>
        <label>Router Strategy Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Service_Class__c</fullName>
        <label>Service Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__UISchema__c</fullName>
        <inlineHelpText>https://mozilla-services.github.io/react-jsonschema-form/</inlineHelpText>
        <label>UISchema</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__formData__c</fullName>
        <inlineHelpText>https://mozilla-services.github.io/react-jsonschema-form/</inlineHelpText>
        <label>Form Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service</label>
    <pluralLabel>Services</pluralLabel>
</CustomObject>